<resources>
    <string name="app_name">Mob Dev SpaceX App</string>

    <string name="drawer_header_title">SpaceX</string>
    <string name="drawer_launches_title">Launches</string>
    <string name="drawer_company_title">About SpaceX</string>
    <string name="drawer_settings_title">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="toolbar_title_launches">Launches</string>
    <string name="toolbar_title_launch">Launch</string>
    <string name="toolbar_title_rocket">Rocket</string>
    <string name="toolbar_title_settings">Settings</string>
    <string name="toolbar_title_company">Company</string>

    <string name="settings_length_key">settings_length_key</string>
    <string name="settings_mass_key">settings_weight_key</string>

    <string name="length">Length</string>
    <string name="mass">Mass</string>

    <string name="settings_length_summary">Select your preferred unit of measurement.</string>
    <string name="settings_mass_summary">Select your preferred unit of measurement.</string>

    <string name="length_meters">Meters</string>
    <string name="length_feet">Feet</string>

    <string name="mass_pounds">Pounds</string>
    <string name="mass_kilograms">Kilograms</string>

    <string name="length_default_unit">Meters</string>
    <string name="mass_default_unit">Pounds</string>

    <string name="length_amount_meters">%1$.1f m</string>
    <string name="length_amount_feet">%1$.1f ft</string>

    <string name="mass_amount_pounds">%1$d lb</string>
    <string name="mass_amount_kilograms">%1$d kg</string>

    <string name="launch_item_flight_number">Flight no: %1d</string>

    <string name="rocket_active_true">Yes</string>
    <string name="rocket_active_false">No</string>

    <string name="launch_name_placeholder">Launch name</string>
    <string name="flight_number">Flight no</string>
    <string name="datetime">Date/Time</string>
    <string name="rocket">Rocket</string>
    <string name="launch_details_null">Awaiting more information from SpaceX.</string>

    <string name="rocket_name_placeholder">Rocket name</string>
    <string name="height">Height</string>
    <string name="diameter">Diameter</string>
    <string name="active">Active</string>
    <string name="first_flight">First flight</string>
    <string name="value_placeholder">unavailable</string>
    <string name="description_placeholder">description here</string>
    <string name="details">Details</string>

    <string name="company_name_placeholder">Company name</string>
    <string name="founder">Founder</string>
    <string name="founded">Founded</string>
    <string name="employees">Employees</string>
    <string name="vehicles">Vehicles</string>
    <string name="launch_sites">Launch sites</string>
    <string name="test_sites">Test sites</string>
    <string name="links">Links</string>
    <string name="website">Website</string>
    <string name="flickr">Flickr</string>
    <string name="twitter">Twitter</string>
    <string name="link_placeholder">link</string>





</resources>