<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/settings_list_preference_length_titles"
        android:entryValues="@array/settings_list_preference_length_values"
        android:key="@string/settings_length_key"
        android:title="@string/length"
        android:defaultValue="@string/length_default_unit"
        android:summary="@string/settings_length_summary"/>

    <ListPreference
        android:entries="@array/settings_list_preference_weight_titles"
        android:entryValues="@array/settings_list_preference_weight_values"
        android:key="@string/settings_mass_key"
        android:title="@string/mass"
        android:defaultValue="@string/mass_default_unit"
        android:summary="@string/settings_mass_summary"/>


</PreferenceScreen>