<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/standard_margin">

        <TextView
            android:id="@+id/launch_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:text="@string/launch_name_placeholder"
            android:textSize="@dimen/detail_title_size"
            android:layout_gravity="start"/>



        <ImageView
            android:id="@+id/launch_detail_icon"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            app:srcCompat="@drawable/ic_rocket_launch" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:id="@+id/launch_detail_flight_no"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:textSize="@dimen/detail_text_size"
                android:text="@string/flight_number"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:id="@+id/launch_detail_flight_no_value"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:textSize="@dimen/detail_text_size"
                android:text="@string/value_placeholder"/>

        </LinearLayout>

        <include layout="@layout/info_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:id="@+id/launch_detail_datetime"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:textSize="@dimen/detail_text_size"
                android:text="@string/datetime"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:id="@+id/launch_detail_datetime_value"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:textSize="@dimen/detail_text_size"
                android:text="@string/value_placeholder"/>

        </LinearLayout>

        <include layout="@layout/info_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:id="@+id/launch_detail_rocket"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:textSize="@dimen/detail_text_size"
                android:text="@string/rocket"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:id="@+id/launch_detail_rocket_value"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:textSize="@dimen/detail_text_size"
                android:text="@string/value_placeholder"
                android:drawableEnd="@drawable/ic_chevron_right"
                android:drawableRight="@drawable/ic_chevron_right" />

        </LinearLayout>



        <TextView
            android:id="@+id/launch_detail_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:text="@string/details"
            android:textSize="@dimen/detail_subtitle_size"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/launch_detail_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/description_placeholder"/>



    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>